--- a/vignettes/FAQs.Rmd
+++ b/vignettes/FAQs.Rmd
@@ -78,3 +78,15 @@ facilitate this.
 In a number of cases the solutions of lower budget levels are not possible as
 the minimum cost solution for the country exceeds these lower budget bounds. As
 no solution can be found in these instances, the output is omitted. 
+
+### 8. Why does impact not decrease linearly as b decreases?
+
+As the budget decreases we must remove interventions to decrease costs accordingly.
+Treatment is prioritised in the optimisation and not reduced before all other interventions have been removed. This
+means we must remove preventative interventions, such as LLINs first. Reducing these
+interventions can lead to increased transmission and, for a fixed treatment coverage,
+an increase in treatment costs. This creates a threshold condition whereby either very
+large decreases in coverage must be made in a single step (to offset both the decrease in 
+budget and associated rise in treatment cost), or none at all. The point at which
+this big jump from high to low (or no) coverage occurs corresponds to a big jump in 
+cases and deaths. The level of b where this happens is transmission dependent.
